@@ -42,11 +42,11 @@ for d in $dirs ; do
 	files=`/usr/bin/find $d -name "$2" -type f 2>/dev/null`
 	for f in $files
 	do
-		syms=`/usr/bin/readelf -s $f 2>/dev/null | egrep ' setgid@.*GLIBC| setegid@.*GLIBC| setresgid@.*GLIBC'`
+		syms=`/usr/bin/readelf -sW $f 2>/dev/null | egrep ' setgid@.*GLIBC| setegid@.*GLIBC| setresgid@.*GLIBC'`
 		if [ x"$syms" != "x" ] ; then
-			syms=`/usr/bin/readelf -s $f 2>/dev/null | egrep ' setuid@.*GLIBC| seteuid@.*GLIBC| setresuid@.*GLIBC'`
+			syms=`/usr/bin/readelf -sW $f 2>/dev/null | egrep ' setuid@.*GLIBC| seteuid@.*GLIBC| setresuid@.*GLIBC'`
 			if [ x"$syms" != "x" ] ; then
-				syms=`/usr/bin/readelf -s $f 2>/dev/null | egrep ' setgroups@.*GLIBC| initgroups@.*GLIBC'`
+				syms=`/usr/bin/readelf -sW $f 2>/dev/null | egrep ' setgroups@.*GLIBC| initgroups@.*GLIBC'`
 				if [ x"$syms" = "x" ] ; then
 					if [ $FOUND = 0 ]  ; then
 						printf "%-44s%s\n" "FILE" "PACKAGE"
